# parser

./: .gitignore  pyproject.toml
src/parser/: __main__.py  ideabox.txt  layout.txt  main.py
src/parser/comp/: __init__.py
src/parser/comp/main/: __init__.py  controller.py  view.py
src/parser/comp/sheets/: __init__.py  bck_model_api_table.txt  card_mdl.py  card_table_mdl.py  card_table_usage.txt  controller.py  controller_cardview.py  controller_nav.py  controller_visibility.py  helper_table_sizer.py  helper_tri_state.py  model.py  model_api_table.py  model_card.py  model_card_table.py  model_row.py  view.py  widgets.py
src/parser/comp/user_form/: __init__.py  controller.py  model.py  services.py  view.py  widgets.py
src/parser/comp/user_form/ctl/: __init__.py  age_ctl.py  flavor_ctl.py  name_ctl.py
src/parser/comp/utils/: logging.py
src/parser/pyside/: pysiding.py
